<resources>
    <string name="app_name">PopMovApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_details">Details</string>

    <string name="action_settings">Settings</string>
    <string name="action_popular_by_desc">Order descending</string>
    <string name="action_share">Share</string>

    <string name="vote_average_label">Vote average:</string>
    <string name="release_date_label">Release date:</string>
    <string name="poster_content_description">Movie movieDetails</string>
    <string name="left_arrow">&#60;</string>
    <string name="right_arrow">&#62;</string>
    <string name="trailers_label">Trailers:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="trailer_stub_name">Some trailer</string>
    <string name="button_play_content_description">Play trailer button</string>

    <!-- preferences -->
    <string name="current_page_preference">current_page</string>
    <string name="selected_movie_key">selected_movie</string>

    <!-- toggle button state names -->
    <string name="toggle_unchecked">Mark as \nfavorite</string>
    <string name="toggle_checked">Remove from \nfavorites</string>
    
    <!-- account type strings -->
    <string name="sync_account_type">popmovapp.dyomin.com</string>

</resources>
